2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* tests/t_selectors_b_h.at, testsuite.at: New test.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* database.cc (manifest_cert_exists, put_manifest_cert): 
	(get_manifest_cert, get_manifest_certs): Remove unused methods.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* database.cc (put_reverse_version, put_file_reverse_version):
	Whoops, missed some dead code.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (build_roster_style_revs_from_manifest_style_revs):
	Remove unused variable; silence gcc warning.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* packet.cc (consume_file_reverse_delta) 
	(struct feed_packet_consumer): Remove support for nonexistent
	"frdelta" packet type.
	* database.{hh,cc} (put_reverse_version)
	(put_file_reverse_version): Remove unused methods.
	* key_store.cc (struct keyreader): Remove obsolete methods.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* database.cc (set_filename): Simplify slightly.
	(delta_exists): Remove unused 3-argument version.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (reindex): Remove.
	* database.cc (database::rehash): Likewise.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* change_set.{cc,hh}: Remove.

2006-01-10  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (Monotone.get_revision): Update to
	use 'automate get_revision' instead of 'cat revision'.

2006-01-10  Richard Levitte  <richard@levitte.org>

	* lua.cc (monotone_parse_basic_io_for_lua): Don't trust the
	returned value from lua_tostring() to stick around.  Instead, copy
	it into a regular std::string.
	* std_hooks.lua (get_netsync_read_permissions,
	get_netsync_write_permissions): Make sure to properly close the
	permission files.

2006-01-09  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc, monotone.1, monotone.cc, po/fr.po, po/ja.po,
	po/pt_BR.po, testsuite.at: Change the default port from 5253 to
	4691 (assigned to us by IANA).
