@@ -1,5 +1,10 @@
 2006-01-10  Nathaniel Smith  <njs@pobox.com>
 
+	* lua.{cc,hh} (hook_resolve_file_conflict)
+	(hook_resolve_dir_conflict): Remove dead code.
+
+2006-01-10  Nathaniel Smith  <njs@pobox.com>
+
 	* tests/t_selectors_b_h.at, testsuite.at: New test.
 
 2006-01-10  Nathaniel Smith  <njs@pobox.com>
